updated hare buttons

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div id="showcase">
         <div class="container">
           <div class="showcase-content">
-            <img src="assets/logo.png" width="35%" />
+            <img src="assets/logo.png" width="35%" id="imgcol" />
 
             <h1 class="lead">What type of Instagrammer are you?</h1>
             <h3>
