--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Quiz Page</title>
+    <title>What type of Instagrammer are you?</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <!-- style.css -->
     <link rel="stylesheet" href="./dist/css/style.css" />
