--- a/end.html
+++ b/end.html
@@ -89,9 +89,9 @@
           <i class="fab fa-facebook"></i>
         </a>
   
-        <a href="#" class="instagram-btn">
+       <!-- <a href="#" class="instagram-btn">
           <i class="fab fa-instagram"></i>
-        </a>
+        </a>-->
   
       
   
@@ -101,6 +101,9 @@
   
         <a href="#" class="whatsapp-btn">
           <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="#" class="twitter-btn">
+          <i class="fab fa-twitter"></i>
         </a>
         
       </div>
